# ChangeLog for vmware overlay
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $ Id: $

  13 Jul 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  app-emulation/vmware-player/vmware-player-2.0.0.45731.ebuild:
  Added another mirror.

  13 Jul 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  -app-emulation/vmware-esx-tools/vmware-esx-tools-3.0.1.ebuild,
  -app-emulation/vmware-esx-tools/files/vmware-esx-tools:
  Removing older version of the vmware-esx-tools ebuild.

  11 Jul 2007; Mike Auty <ikelos@gentoo.org>:
  Bump to vmware-any-any-update110.
  Add patch for 2.6.22 to 1.0.0.16 (110 should take care of <1.0.0.16).
  Revert bash changes, to allow vmware to start with baselayout-2/dash.
  Try to fix up vmware-workstation-tools for version 6.

  08 Jul 2007; Mike Auty <ikelos@gentoo.org>:
  Attempt to get vmware-any-any-update fetched from the gentoo mirrors, even with fetch restrictions.
  Also ensure fetch restrictions message is correct.

  21 Jun 2007; Mike Auty <ikelos@gentoo.org>:
  Added fetch restrictions to workstation-6.
  Change the icon installation also.
  
  20 Jun 2007; Mike Auty <ikelos@gentoo.org>:
  Removed old expired vmware-workstations.
  Added new vmware-workstation ebuild.

  26 May 2007; Mike Auty <ikelos@gentoo.org>:
  Update vmware-modules-1.0.0.16 and for the new vmware-player-2.0 which was also added.
  Fixed up amd64 PAM settings in vmware-server hopefully.

  08 May 2007; Mike Auty <ikelos@gentoo.org>:
  Fix up update-modules in postinst.
  
  08 May 2007; Mike Auty <ikelos@gentoo.org>:
  Add in a patch for server-tools on >=2.6.20.

  07 May 2007; Mike Auty <ikelos@gentoo.org>:
  Cleanup and resync vmware-server ebuilds with tree.
  
  29 Apr 2007; Mike Auty <ikelos@gentoo.org>:
  Eagle eyed Percy Jahn spotted the typo in vmware-mod.eclass,
  which is now fixed.
  
  29 Apr 2007; Mike Auty <ikelos@gentoo.org>:
  Forgot to bump vmware server console at the same time.
  
  28 Apr 2007; Mike Auty <ikelos@gentoo.org>: